# PERTI

./: .eslint-perti-rules.js  .eslintrc.json  .gitattributes  .gitignore  .htaccess  .php-cs-fixer.php  CLAUDE.md  CODE_FIXES_INVENTORY.md  CODE_INCONSISTENCIES_EXPLAINED.md  CODE_PATTERNS_CATALOG.md  CODING_STANDARDS.md  DEPENDENCY_MAP.md  GDT_Phase1_Transition.md  GDT_Unified_Design_Document_v1.1.md  LICENSE  NTML_Advisory_Formatting_Spec.md  NTML_Advisory_Formatting_Transition.md  ORPHANED_FILES.md  PERTI.sln  PERTI_MIGRATION_TRACKER.md  PLAN.md  README.md  SECURITY.md  STYLING_GUIDE.md  TMI_Documentation_Index.md  advisory-builder.php  advisory-templates.js  advisory_formatting_spec_for_claude_code.md  airac_full_update.py  airport_config.php  airspace-elements.php  api-docs.php  assistant_codebase_index_v12.md  assistant_codebase_index_v13.md  assistant_codebase_index_v14.md  assistant_codebase_index_v15.md  assistant_codebase_index_v16.md  assistant_codebase_index_v17.md  assistant_codebase_index_v18.md  azure-pipelines-1.yml  (+66 more)
.claude/: settings.json  settings.local.json
.husky/: pre-commit
.postman/: config.json
adl/: ARCHITECTURE.md  DAEMON_SETUP.md  ETA_AircraftPerf_Transition_Summary.md  NAVDATA_IMPORT.md  OOOI_Full_Roadmap.md  OOOI_Quick_Start.md  OOOI_Zone_Detection_Transition_Summary.md  Phase5E1_Boundary_Import_Transition_Summary.md  Phase5E1_Boundary_Import_Transition_Summary_v2.md  Phase5_Weather_Boundaries_Transition_Summary.md  README.md  oooi_enhanced_design_v2.1.md  planned_crossings_performance.md  simbrief_parsing_transition.md
apache/: websocket.conf
api/: .htaccess  cron.php  scheduler.php  tiers.php  web.config
api-docs/: README.md  index.php  openapi.yaml
artifacts/: verification_report_findings_2026-03-14.json  verification_report_local_2026-03-14.json
cron/: process_tmi_proposals.php  run_indexer.php
database/: Migrate.php  tables.php
deprecated/: data.php  route_bu.php
discord-bot/: .env.example  .gitignore  README.md  bot.js  cleanup-coordination.js  package-lock.json  package.json
docs/: ADL_REFRESH_MIGRATION_GUIDE.md  ATFM_Simulator_Phase1_5_TrafficGen_2026-01-12.md  AZURE_COST_OPTIMIZATION_ANALYSIS.md  CANOC_ADVISORY_INTEGRATION.md  CODEBASE_REORGANIZATION_CATALOG.md  COMPUTATIONAL_REFERENCE.md  DEPLOYMENT_GUIDE.md  GDT_Unified_Design_Document_v1.md  HIBERNATION_RUNBOOK.md  I18N_TRACKING.md  PERFORMANCE_OPTIMIZATION.md  QUICK_REFERENCE.md  README.md  STATUS.md  UI_CONSISTENCY_AUDIT_2026-03-06.md  VATSIM_STATS_DATABASE.md  ctp-pull-sync-go-live.md  fmds-comparison.md  route_distance_transition.md  simbrief_parsing_summary.md  simbrief_parsing_transition.md  swim-api-audit-2026-03-23.md  vATCSCC_Use_Case_Digestible_v7.md
includes/: gdp_section.php
integrations/aoc-client/: CMakeLists.txt  README.md  config.example.ini
integrations/aoc-client/include/: aoc_client.h  locale.h  sim_interface.h  swim_api.h  telemetry.h
integrations/aoc-client/locales/: en-US.ini  fr-CA.ini
integrations/aoc-client/src/: aoc_client.cpp  locale.cpp  main.cpp  sim_msfs.cpp  sim_xplane.cpp  swim_api.cpp  telemetry.cpp
integrations/flight-sim/msfs/: CMakeLists.txt  README.md  vatswim_config.ini.example
integrations/flight-sim/msfs/package/vatswim-msfs/: layout.json  manifest.json
integrations/flight-sim/msfs/src/: main.cpp
integrations/flight-sim/p3d/: CMakeLists.txt  README.md  vatswim_p3d.ini.example
integrations/flight-sim/p3d/addon/: add-on.xml.in
integrations/flight-sim/p3d/src/: main.cpp
integrations/flight-sim/xplane/: CMakeLists.txt  README.md  vatswim_config.txt.example
integrations/flight-sim/xplane/src/: datarefs.h  main.c
lib/: ArtccNormalizer.php  Changelog.php  Database.php  DateTime.php  Response.php  Session.php
load/: .footer.php.swp  aircraft_families.php  airport_aliases.php  breadcrumb.php  cache.php  config.example.php  config.php  connect.php  coordination_log.php  footer.php  gdp_section.php  header.php  hibernation.php  i18n.php  input.php  nav.php  nav_public.php  org_context.php  perti_constants.php  playbook_search_panel.php  playbook_visibility.php  swim_config.php  tmi_log.php
login/: .htaccess  callback.php  index.php
postman/: README.md
scripts/: README.md  README_boundaries.md  adl_archive_daemon.php  analyze_monitoring.php  analyze_mysql_runways.php  analyze_runway_data.sql  archival_daemon.php  atis_parser.php  backfill_ata_utc.sql  brightline_sno_export.py  build_sector_boundaries.py  cad_volumes_import.py  cdm_daemon.php  check_batch_version.sql  classify_boundary_hierarchy.py  cleanup_non_airports.sql  clear_config_data.sql  config_data_migration.sql  convert_config_csv_to_sql.ps1  deploy_sp_optimizations.php  diagnose_flight_counts.sql  ecfmp_poll_daemon.php  ese_to_geojson.py  eta_accuracy_diagnostic.sql  eta_accuracy_report.sql  eta_diagnostic.sql  event_sync_daemon.php  export_config_data.php  export_config_to_sql.php  export_perti_events.php  export_sql.php  fix_config_migration.sql  fix_input_php.php  generate_historical_changelog.py  hibernate.sh  import_rw_rates.php  merge_sua_data.js  merge_sua_data.php  migrate_config_data.php  migrate_division_events.php  (+46 more)
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/cmake/: swim_sdkConfig.cmake.in
sdk/cpp/examples/: CMakeLists.txt  basic_ingest.cpp  oooi_detector.cpp
sdk/cpp/include/swim/: http.h  json.h  swim.h  telemetry.h  types.h
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: README.md  airline_fleet_tracker.py  airport_demand_dashboard.py  airport_monitor.py  async_example.py  basic_example.py  data_export_pipeline.py  data_provider_example.py  discord_bot.py  position_tracker.py  rest_example.py  route_compliance_monitor.py  sector_traffic_monitor.py  tmi_monitor.py  webhook_receiver.py
sdk/python/swim_client/: __init__.py  client.py  events.py  models.py  rest.py
sessions/: cid.php  handler.php  query.php
wiki/: ADL-API.md  AIRAC-Update.md  API-Reference.md  ATFM-Training-Simulator.md  Acronyms.md  Algorithm-Data-Refresh.md  Algorithm-ETA-Calculation.md  Algorithm-Route-Parsing.md  Algorithms-Overview.md  (+48 more)
(+1999 files in other folders)
