[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swim-client"
version = "2.0.0"
description = "VATSIM SWIM API Client - REST API and real-time flight data streaming"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "vATCSCC", email = "dev@vatcscc.org"}
]
keywords = ["vatsim", "swim", "aviation", "websocket", "flight-tracking", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.8"
dependencies = [
    "websockets>=10.0",
]

[project.optional-dependencies]
rest = [
    "requests>=2.28",
]
async = [
    "aiohttp>=3.8",
]
all = [
    "requests>=2.28",
    "aiohttp>=3.8",
]
dev = [
    "requests>=2.28",
    "aiohttp>=3.8",
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "black>=22.0",
    "mypy>=0.990",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://perti.vatcscc.org"
Documentation = "https://perti.vatcscc.org/api/swim/v1/docs"
Repository = "https://github.com/vatcscc/swim-client-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["swim_client*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py38"
